# LCC_implicit

./: CMakeLists.txt  test.cpp
